# oda_data_package

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CACHING.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dac1_indicators.json  default.mk  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/workflows/: CI.yml  changelog CI.yml  ci.yml  release.yml  test.yml
docs/: aiddata.md  caching.md  changelog.md  currencies-prices.md  data-enrichment.md  data-sources.md  getting-started.md  index.md  migration.md  mkdocs.yml  oecd-client.md  policy-markers.md  sector-imputations.md  why-oda-data.md
docs/docs/: caching.md  changelog.md  contributing.md  currencies-prices.md  data-sources.md  getting-started.md  index.md  migration.md  oecd-client.md  policy-markers.md  sector-imputations.md  why-oda-data.md
docs/source/: conf.py  index.rst  modules.rst  oda_data.classes.rst  oda_data.clean_data.rst  oda_data.get_data.rst  oda_data.indicators.rst  oda_data.read_data.rst  oda_data.rst
oda_data/: README.md  __init__.py  config.py  logger.py
oda_data/.raw_data/: README.md
oda_data/api/: api.py  classes.py  constants.py  main.py  oecd.py  representations.py  sources.py
oda_data/classes/: README.md  oda_data.py
oda_data/clean_data/: README.md  channels.py  common.py  crs_channel_mapping.csv  dac2a_config.json  dtypes.py  multisystem_config.json  names.py  schema.py  validation.py
oda_data/get_data/: README.md  aiddata.py  common.py  crs.py  dac1.py  dac2a.py  multisystem.py
oda_data/indicators/: README.md  common.py  create_indicators.py  indicator.py  indicators.json  linked_indicators.py  lists.py  research_indicators.py  sector_components.py
oda_data/indicators/crs/: common.py  crs_functions.py  crs_indicators.json  oecd.py  one.py
oda_data/indicators/dac1/: common.py  dac1_functions.py  dac1_indicators.json  oecd.py  one.py
oda_data/indicators/dac2a/: common.py  dac1_indicators.json  dac2a_functions.py  oecd.py  one.py
oda_data/indicators/research/: eu.py  policy_markers.py  sector_imputations.py
oda_data/read_data/: README.md  read.py
oda_data/settings/: Available indicators.md  README.md  channel_codes.json  crs_config.json  crs_flow_types.json  crs_policy_markers.json  crs_purpose.json  dac1_aid_flow_types.json  dac1_aidtypes.json  dac1_config.json  dac1_flow_types.json  dac2a_aid_type.json  donor_groupings.json  indicators.json  key_columns.json  multisystem_config.json  recipient_groupings.json  sectors.json  v1_indicators_mapping.json
oda_data/tools/: README.md  cache.py  compatibility.py  gni.py  groupings.py  names.py  sector_lists.py  sectors.py
oda_data/tools/names/: add.py  create_mapping.py  crs_names.json
src/oda_data/: __init__.py  config.py  oda_data_indicators.csv
src/oda_data/.raw_data/: README.md
src/oda_data/api/: constants.py  oecd.py  representations.py  sources.py
src/oda_data/cache/: __init__.py  _migrate.py  api.py  config.py  types.py
src/oda_data/clean_data/: channels.py  common.py  crs_channel_mapping.csv  schema.py  validation.py
src/oda_data/indicators/: common.py  indicator.py
src/oda_data/settings/: crs_flow_types.json  crs_modalities.json  crs_policy_markers.json  crs_purpose.json  crs_type_of_finance.json  dac1_aid_flow_types.json  dac2a_aid_type.json  flow_types.json  indicators.json  key_columns.json  provider_groupings.json  recipient_groupings.json  v1_indicators_mapping.json
src/oda_data/tools/: cache.py  compatibility.py  gni.py  groupings.py  sector_lists.py
tests/: README.md  conftest.py  test_oda_data.py
tests/cache/: conftest.py  test_cache_api.py  test_network_integration.py
tests/files/: comma_df_raw.csv  crs_codes.json  crs_codes_raw  dac1.feather  data_updates.json  purpose_test_df.csv  pydeflate_dac1.feather  response_multi  tab_df_raw.txt  tab_df_raw_uni.txt  table1_raw_2018_2019.feather  table1_raw_2019_2019.feather  table1_raw_2020_2020.feather  test_flow_students.csv  test_ge_linked_students.csv  test_ge_students.csv
tests/integration/: test_cache_coordination.py  test_oecd_client_flow.py
tests/migration/: conftest.py  test_migration_matrix.py  test_multiprocess_race.py
tests/test_classes/: test_oda_data.py  test_representations.py
tests/test_clean_data/: test_clean_common.py  test_clean_crs.py  test_common.py  test_crs.py  test_names.py
tests/test_get_data/: test_common.py  test_get_common.py  test_get_crs.py
tests/test_indicators/: test_linked_indicators.py  test_research_indicators.py  test_sector_components.py
tests/test_read_data/: test_read.py
tests/test_tools/: test_names.py
tests/unit/: test_cache.py  test_channels.py  test_cleaning.py  test_compatibility.py  test_gni.py  test_groupings.py  test_indicator_loading.py  test_names.py  test_oecd_client.py  test_sector_lists.py  test_sources.py  test_validation.py
tests/unit/indicators/: test_crs_common.py  test_crs_functions.py  test_crs_oecd.py  test_dac1_functions.py  test_dac1_oecd.py  test_dac2a_functions.py  test_research_eu.py  test_research_policy_markers.py  (+1 more)
tutorials/: 1. total_donor_oda.ipynb  2. total_recipient_oda_by_donor.ipynb  3. sector_analysis_by_donor_and_recipient.ipynb  UK_oda_CRS_gender.csv  UK_oda_DAC1.csv  dac1.feather  data_updates.json  gender_commitments_vs_disbursements.py  sector_analysis_by_donor_and_recipient.ipynb  sector_analysis_by_donor_and_recipient_UK_test.ipynb  total_UK_ODA_Dac2a.csv  total_donor_oda.ipynb  total_donor_oda_UK_test.ipynb  total_recipient_oda.ipynb  total_recipient_oda_by_donor.csv  total_recipient_oda_by_donor.ipynb  total_recipient_oda_by_donor_UK_test.ipynb
tutorials/data/: README.md  crs_codes.json  dac1.feather  data_updates.json
tutorials/output/: README.md  UK_oda_CRS_climate.csv  UK_oda_CRS_gender.csv  total_donor.csv  total_gender_oda.csv
tutorials/uk_oda_test/: sector_analysis_by_donor_and_recipient_UK_test.ipynb  sector_analysis_by_donor_and_recipient_UK_test_climate.ipynb  total_donor_oda_UK_test.ipynb  total_recipient_oda_by_donor_UK_test.ipynb
(+24 files in other folders)
